# fltk-rs-android

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/fltkapp/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/app/: .gitignore  Cargo.toml
app/src/main/cpp/app/src/: lib.rs
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/fltkapp/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
